fix horizontal overflow and remade form to grid

--- a/src/styles/layout/_cardList.scss
+++ b/src/styles/layout/_cardList.scss
@@ -1,5 +1,5 @@
 .list {
-  padding: 20px;
+  padding: 20px, 20px;
   height: 100vh;
   display: grid;
   place-items: center center;
