--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -1,25 +1,30 @@
 .form{
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-  align-items: center;
+  display: grid;
+  place-items: center center;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   font-family: 'Anton';
   color: yellowgreen;
   font-size: 40px;
-  height: 40px;
-  margin: auto;
-
-  &:hover {
-    color: black;
-  }
+  margin: 40px;
+  box-sizing: border-box;
+  gap: 20px;
 
   &__input{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 40px;
+    display: grid;
+    place-items: center center;
+ 
+    &__movieInput{
+      height: 2em;
+      border: 5px solid #419ad5;
+      border-radius: 10px 5px;
+    }
 
     &__label{
-      margin-right: 30px;
+      padding-bottom: 5px;
+
+      &:hover {
+        color: black;
+      }
     }
   }
 }
